tests/eu.numberfour.n4js.bugreports.tests/bugreports-tests/IDEBUG_0210_TypeArgInference_AmbiguousUnionType1.n4js.xt
/* XPECT_SETUP eu.numberfour.n4js.bugreports.tests.N4JSBugreportTest END_SETUP  */


class A {}

class G<T> {}

function <T> foo( param : union{T,G<T>} ) : T {return null;}

// XPECT noerrors -->
var x : number = foo ( new G<number>() ); // error: "union{G<number>,number} is not a subtype of number." at "foo ( new G<number>() )"

